# python-project-52

./: .gitignore  README.md  build.sh  conftest.py  makefile  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tests
.github/workflows/: main.yml
hexlet_code/: asgi.py  settings.py  wsgi.py
task_manager/: admin.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
task_manager/migrations/: 0001_initial.py  0002_task.py  0003_label_task_labels.py  0004_alter_label_options_alter_task_options_and_more.py
task_manager/templates/task_manager/: index.html  label_confirm_delete.html  label_form.html  label_list.html  login.html  status_list.html  task_detail.html  task_form.html  task_list.html  user_confirm_delete.html  user_form.html  user_list.html
task_manager/tests/: test_filters.py  test_labels.py  test_statuses.py  test_tasks.py  tests.py
templates/: base.html
templates/task_manager/: base.html  index.html  label_list.html  login.html  status_confirm_delete.html  status_form.html  status_list.html  task_confirm_delete.html  task_list.html  user_confirm_delete.html  user_form.html  user_list.html
